--- a/miu_1210/seago_wesley_project2/Gold/index.html
+++ b/miu_1210/seago_wesley_project2/Gold/index.html
@@ -97,17 +97,11 @@
 					<div data-role="collapsible">
 						<h3>Date</h3>
 						<ul data-role="listview" data-filter="true">
-							<li><h4>2012-10-02</h4></li>
-								<li><h4>2012-10-02</h4></li>
-								<li><h4>2012-10-01</h4></li>
-								<li><h4>2012-09-29</h4></li>
-								<li><h4>2012-09-27</h4></li>
-								<li><h4>2012-09-24</h4></li>
-								<li><h4>2012-09-19</h4></li>
-								<li><h4>2012-09-16</h4></li>
-								<li><h4>2012-09-15</h4></li>
-								<li><h4>2012-09-12</h4></li>
-								<li><h4>2012-09-07</h4></li>
+								<li><h4>2012-10-02</h4><p>Chloe, Tylenol 1ml, 9:00PM, Fever</p></li>
+								<li><h4>2012-10-02</h4><p>Chloe, Tylenol, 1ml, 5:00PM, Fever</p></li>
+								<li><h4>2012-10-01</h4><p>Erin, Imitrex, 1, 6:00PM, Migraine</p></li>
+								<li><h4>2012-09-29</h4><p>Meagan, Tylenol Sinus, 1, 7:00AM, Sinus Pressure</p></li>
+								<li><h4>2012-09-27</h4><p>Reagan, Robitussin, 2ml, 7:30PM, Congestion</p></li>
 						</ul>
 					</div>
 					<div data-role="collapsible">
@@ -134,7 +128,7 @@
 				<ul>
 					<li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-iconpos="top">Home</a></li>
 					<li><a href="additem.html" data-icon="plus" data-iconpos="top" data-ajax="false">Add Event</a></li>
-					<li><a href="http://wseago2.github.com/MDVProjects/miu_1210/seago_wesley_project1/index.html" data-icon="gear" data-iconpos="top">GH-Pages</a></li>
+					<li><a href="http://wseago2.github.com/MDVProjects/miu_1210/seago_wesley_project2/Gold/index.html" data-icon="gear" data-iconpos="top">GH-Pages</a></li>
 					<li><a href="..//Bronze/index.html" data-icon="forward" data-iconpos="top">Bronze App</a></li>
 				</ul>
 			</div>
