--- a/miu_1210/seago_wesley_project2/Gold/index.html
+++ b/miu_1210/seago_wesley_project2/Gold/index.html
@@ -102,6 +102,7 @@
 								<li><h4>2012-10-01</h4><p>Erin, Imitrex, 1, 6:00PM, Migraine</p></li>
 								<li><h4>2012-09-29</h4><p>Meagan, Tylenol Sinus, 1, 7:00AM, Sinus Pressure</p></li>
 								<li><h4>2012-09-27</h4><p>Reagan, Robitussin, 2ml, 7:30PM, Congestion</p></li>
+								<li><h4>2012-09-24</h4><p>Chloe, Tylenol, 1ml, 7:30PM, Fever-Teething</p></li>
 						</ul>
 					</div>
 					<div data-role="collapsible">
