--- a/miu_1210/seago_wesley_project3/Bronze/index.html
+++ b/miu_1210/seago_wesley_project3/Bronze/index.html
@@ -27,6 +27,7 @@
 			<h1>Med Tracker</h1>
 		</div>
 			<div data-role="content" id="bimage" data-inset="true" style="background:url(img/medical.png) no-repeat; background-position:center">
+				<h2>Keep Track of Your Families Medications</h2>
 			</div>
 			<!--Link to addItem page here-->
 			<!--This link to #addevent is for week 3-->
