--- a/miu_1210/seago_wesley_project3/Bronze/notFound.html
+++ b/miu_1210/seago_wesley_project3/Bronze/notFound.html
@@ -12,6 +12,6 @@
 	<body>
 
 		<!-- Page content lives here -->
-		<img src="images/notFound.png" width=320px>
+		<img src="img/notFound.png" width=320px>
 	</body>
 </html>
