--- a/miu_1210/seago_wesley_project3/Gold/index.html
+++ b/miu_1210/seago_wesley_project3/Gold/index.html
@@ -129,7 +129,7 @@
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-iconpos="top">Home</a></li>
-					<li><a href="additem.html" data-icon="plus" data-iconpos="top" data-ajax="false">Add Event</a></li>
+					<li><a href="#addItem" data-icon="plus" data-iconpos="top" data-ajax="false">Add Event</a></li>
 					<li><a href="http://wseago2.github.com/MDVProjects/miu_1210/seago_wesley_project2/Gold/index.html" data-icon="gear" data-iconpos="top">GH-Pages</a></li>
 					<li><a href="..//Bronze/index.html" data-icon="forward" data-iconpos="top">Bronze App</a></li>
 				</ul>
@@ -258,8 +258,8 @@
 				<ul>
 					<li><a href="#home" data-icon="home" data-iconpos="top">Home</a></li>
 					<li><a href="#addEvent" data-icon="plus" class="ui-btn-active ui-state-persist" data-iconpos="top">Add Event</a></li>
-					<li><a href="http://wseago2.github.com/MDVProjects/miu_1210/seago_wesley_project1/index.html" data-icon="gear" data-iconpos="top">GH-Pages</a></li>
-					<li><a href="#home" data-icon="forward" data-iconpos="top">Bronze App</a></li>
+					<li><a href="http://wseago2.github.com/MDVProjects/miu_1210/seago_wesley_project3/Gold/index.html" data-icon="gear" data-iconpos="top">GH-Pages</a></li>
+					<li><a href="..//Bronze/index.html" data-icon="forward" data-iconpos="top">Bronze App</a></li>
 				</ul>
 			</div>
 		</div>
