--- a/miu_1210/seago_wesley_project4/Bronze/index.html
+++ b/miu_1210/seago_wesley_project4/Bronze/index.html
@@ -1,6 +1,6 @@
 <!-- Wesley Seago-->
 <!--MIU Term 1210-->
-<!--Project Week 2-->
+<!--Project Week 4-->
 <!--Bronze App-->
 
 <!doctype html>  
@@ -22,7 +22,7 @@
 </head>
 <body>
 <!--Begin Home Page-->
-	<div data-role="page" id="home" data-theme="c" data-content-theme="b">
+	<div data-role="page" id="home" style="background:url(img/lblue096.jpg)" data-theme="c" data-content-theme="b">
 		<div data-role="header" data-position="fixed">
 			<h1>Med Tracker</h1>
 		</div>
