--- a/miu_1210/seago_wesley_project4/Gold/index.html
+++ b/miu_1210/seago_wesley_project4/Gold/index.html
@@ -1,6 +1,6 @@
 <!-- Wesley Seago  -->
 <!-- MIU Term 1210 -->
-<!-- Gold Project 3    -->
+<!-- Gold Project 4    -->
 <!-- Medicine Tracker -->
 
 <!doctype html>  
@@ -23,7 +23,8 @@
 <body>
 <!--Begin Home Page-->
 	<div data-role="page" id="home" data-theme="b" data-content-theme="b">
-		<div data-role="header" data-position="fixed">
+		<div data-role="header" id="mainheader" data-position="fixed">
+			<img src="img/medicalTiny.png" align="left">
 			<h1>Med Tracker</h1>
 		</div>
 			<ul></ul>
@@ -125,6 +126,7 @@
 					</div>
 				</div>
 		</div>
+
 		<div data-role="footer" data-position="fixed" data-id="home">
 			<div data-role="navbar">
 				<ul>
@@ -144,8 +146,9 @@
 
 		<form action="" method="post" id="addItemForm">
 
-			<div data-role="header" data-position="fixed">
-				<h1>Add Medication</h1>
+			<div data-role="header" id="mainheader" data-position="fixed">
+				<img src="img/medicalTiny.png" align="left">
+				<h1>Add Event</h1>
 			</div>
 			<fieldset data-role="fieldcontain">
 				<small>* fields are required</small>
